--- a/ui/package.json
+++ b/ui/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.4",
+    "@apollo/react-hooks": "^3.1.5",
     "@hot-loader/react-dom": "^16.13.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.2",
     "@types/jest": "^25.2.1",
-    "@types/node": "^13.11.1",
+    "@types/node": "^13.13.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "@types/styled-components": "4.1",
     "apollo-boost": "^0.4.7",
     "graphql": "^15.0.0",
     "react": "^16.13.1",
@@ -21,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "react-window": "^1.8.5",
     "styled-components": "^5.1.0",
     "styled-icons": "^10.2.1",
     "typescript": "^3.8.3"
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.4"
+    "@types/react-router-dom": "^5.1.4",
+    "@types/styled-components": "^5.1.0"
   }
 }
