--- a/ui/package.json
+++ b/ui/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.44",
     "@apollo/react-hooks": "^3.1.5",
     "@hot-loader/react-dom": "^16.13.0",
     "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.3",
-    "@testing-library/user-event": "^10.0.2",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "^10.1.0",
     "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.2",
+    "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/react-dom": "^16.9.7",
     "apollo-boost": "^0.4.7",
+    "date-fns": "^2.12.0",
     "graphql": "^15.0.0",
+    "iso-639-1": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.20",
+    "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
@@ -47,7 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.4",
+    "@types/date-fns": "^2.6.0",
+    "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0"
   }
 }
