--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.12.0",
     "graphql": "^15.0.0",
     "iso-639-1": "^2.1.1",
+    "nanoid": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
+    "@types/nanoid": "^2.1.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0"
   }
