--- a/ui/package.json
+++ b/ui/package.json
@@ -12,12 +12,14 @@
     "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "@types/react-window": "^1.8.2",
     "apollo-boost": "^0.4.7",
     "date-fns": "^2.12.0",
     "graphql": "^15.0.0",
     "iso-639-1": "^2.1.1",
-    "nanoid": "^3.1.3",
+    "nanoid": "^3.1.4",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.1.2",
@@ -52,6 +54,7 @@
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/nanoid": "^2.1.0",
+    "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0"
   }
