--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-window": "^1.8.5",
+    "styled-breakpoints": "^8.1.0",
     "styled-components": "^5.1.0",
     "styled-icons": "^10.2.1",
     "typescript": "^3.8.3"
