--- a/ui/package.json
+++ b/ui/package.json
@@ -7,26 +7,26 @@
     "@hot-loader/react-dom": "^16.13.0",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.1.0",
+    "@testing-library/user-event": "^10.1.2",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/react-window": "^1.8.2",
-    "apollo-boost": "^0.4.7",
     "date-fns": "^2.13.0",
     "graphql": "^15.0.0",
     "iso-639-1": "^2.1.1",
-    "nanoid": "^3.1.5",
+    "nanoid": "^3.1.6",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
+    "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-window": "^1.8.5",
-    "styled-breakpoints": "^8.1.0",
+    "styled-breakpoints": "^8.1.1",
     "styled-components": "^5.1.0",
     "styled-icons": "^10.2.1",
     "typescript": "^3.8.3"
@@ -56,6 +56,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/nanoid": "^2.1.0",
     "@types/react-custom-scrollbars": "^4.0.6",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0"
   }
