--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "apollo-server-fastify": "^2.13.0",
     "dotenv": "^8.2.0",
     "fastify": "^2.14.1",
+    "fastify-cors": "^3.0.3",
     "fastify-helmet": "^3.0.2",
     "fastify-redis": "^3.3.1",
     "graphql": "^15.0.0",
