--- a/ui/package.json
+++ b/ui/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-beta.48",
+    "@apollo/client": "^3.0.0-beta.49",
     "@hot-loader/react-dom": "^16.13.0",
+    "@testing-library/dom": "^7.5.7",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.3.0",
-    "@types/jest": "^25.2.2",
+    "@testing-library/user-event": "^10.3.1",
+    "@types/jest": "^25.2.3",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-window": "^1.8.2",
-    "date-fns": "^2.13.0",
+    "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.0.0",
     "iso-639-1": "^2.1.3",
-    "nanoid": "^3.1.7",
+    "nanoid": "^3.1.9",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
@@ -26,7 +28,6 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-window": "^1.8.5",
-    "styled-breakpoints": "^8.1.1",
     "styled-components": "^5.1.0",
     "styled-icons": "^10.2.1",
     "typescript": "^3.9.2",
@@ -55,11 +56,13 @@
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
+    "@types/dotenv": "^8.2.0",
     "@types/nanoid": "^2.1.0",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
-    "@types/webfontloader": "^1.6.30"
+    "@types/webfontloader": "^1.6.30",
+    "cypress": "^4.5.0"
   }
 }
