--- a/ui/package.json
+++ b/ui/package.json
@@ -6,11 +6,11 @@
     "@apollo/client": "^3.0.0-beta.49",
     "@hot-loader/react-dom": "^16.13.0",
     "@testing-library/dom": "^7.5.7",
-    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.3.1",
     "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.0.4",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-window": "^1.8.2",
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "graphql": "^15.0.0",
     "iso-639-1": "^2.1.3",
+    "memoize-one": "^5.1.1",
     "nanoid": "^3.1.9",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
@@ -30,7 +31,7 @@
     "react-window": "^1.8.5",
     "styled-components": "^5.1.0",
     "styled-icons": "^10.2.1",
-    "typescript": "^3.9.2",
+    "typescript": "^3.9.3",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
