--- a/ui/package.json
+++ b/ui/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-beta.49",
+    "@apollo/client": "^3.0.0-beta.50",
     "@hot-loader/react-dom": "^16.13.0",
     "@testing-library/dom": "^7.5.7",
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.3.1",
+    "@testing-library/user-event": "^10.3.5",
     "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.4",
+    "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-window": "^1.8.2",
@@ -63,7 +63,6 @@
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
-    "@types/webfontloader": "^1.6.30",
-    "cypress": "^4.5.0"
+    "@types/webfontloader": "^1.6.31"
   }
 }
