updates for morning 28/05/2020

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "hocs",
     "idx",
     "query",
-    "start"
+    "smoothscroll",
+    "start",
+    "themoviedb"
   ],
   "tslint.autoFixOnSave": true,
   "tslint.enable": true
