--- a/ui/package.json
+++ b/ui/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.50",
     "@hot-loader/react-dom": "^16.13.0",
-    "@testing-library/dom": "^7.5.8",
-    "@testing-library/jest-dom": "^5.8.0",
+    "@testing-library/dom": "^7.5.9",
+    "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.4.0",
     "@types/jest": "^25.2.3",
@@ -23,7 +23,6 @@
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -36,7 +35,7 @@
     "webfontloader": "^1.6.28"
   },
   "scripts": {
-    "start": "set PORT=4000 && react-scripts start",
+    "start": "set PORT=4000 && react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -65,6 +64,9 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/smoothscroll-polyfill": "^0.3.1",
     "@types/styled-components": "^5.1.0",
-    "@types/webfontloader": "^1.6.32"
+    "@types/webfontloader": "^1.6.32",
+    "customize-cra": "^1.0.0",
+    "customize-cra-react-refresh": "^1.0.6",
+    "react-app-rewired": "^2.1.6"
   }
 }
