--- a/ui/package.json
+++ b/ui/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-beta.50",
+    "@apollo/client": "^3.0.0-rc.0",
     "@hot-loader/react-dom": "^16.13.0",
-    "@testing-library/dom": "^7.8.0",
+    "@testing-library/dom": "^7.9.0",
     "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.0.5",
-    "@testing-library/user-event": "^10.4.1",
+    "@testing-library/react": "^10.0.6",
+    "@testing-library/user-event": "^11.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.9",
     "@types/react": "^16.9.35",
@@ -24,7 +24,7 @@
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
-    "react-responsive": "^8.0.3",
+    "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
