Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,8 @@ steps:
     npm --prefix ./server install
     npm --prefix ./server build
   displayName: 'build server'
+
+- script: |
+    npm --prefix ./ui install
+    npm --prefix ./ui build
+  displayName: 'build ui'
