--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,15 @@
   "cSpell.words": [
     "Flixy",
     "actv",
+    "boxicons",
     "deduplication",
+    "evaicons",
     "fontactive",
     "gqls",
+    "heroicons",
     "hocs",
     "idx",
+    "nowrap",
     "query",
     "smoothscroll",
     "start",
