--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "fastify-redis": "^4.0.1",
     "graphql": "^15.0.0",
     "log4js": "^6.3.0",
+    "newrelic": "^6.8.0",
     "node-fetch": "^2.6.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0-rc.2"
