--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ node_modules
 .vscode/sftp.json
 out/linecounter.json
 out/linecounter.txt
-# build
+build
 ui/build/asset-manifest.json
 ui/build/index.html
 ui/.env
