dedupe data for movies and tv sliders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
     "Flixy",
     "actv",
     "boxicons",
+    "data",
+    "dedupe",
+    "deduped",
+    "deduped data",
     "deduplication",
     "evaicons",
     "fontactive",
