--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
     "date-fns": "^2.14.0",
+    "dedupe": "^3.0.2",
     "dotenv": "^8.2.0",
     "graphql": "^15.0.0",
     "iso-639-1": "^2.1.3",
