--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
+    "compromise": "^13.2.0",
     "date-fns": "^2.14.0",
     "dedupe": "^3.0.2",
     "dotenv": "^8.2.0",
