--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,6 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
-    "compromise": "^13.2.0",
     "date-fns": "^2.14.0",
     "dedupe": "^3.0.2",
     "dotenv": "^8.2.0",
@@ -67,6 +66,7 @@
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.5",
+    "@types/recoil": "^0.0.0",
     "@types/smoothscroll-polyfill": "^0.3.1",
     "@types/styled-components": "^5.1.0",
     "@types/webfontloader": "^1.6.32",
