--- a/ui/package.json
+++ b/ui/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-rc.12",
+    "@apollo/client": "^3.0.2",
     "@hot-loader/react-dom": "^16.13.0",
     "@testing-library/dom": "^7.20.0",
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.5",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^11.4.2",
     "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.14",
+    "@types/node": "^14.0.25",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
-    "date-fns": "^2.14.0",
+    "date-fns": "^2.15.0",
     "dedupe": "^3.0.2",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
@@ -33,9 +33,9 @@
     "recoil": "^0.0.10",
     "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.1.1",
-    "styled-icons": "^10.6.0",
+    "styled-icons": "^10.11.0",
     "throttle-debounce": "^2.2.1",
-    "typescript": "^3.9.6",
+    "typescript": "^3.9.7",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
