--- a/server/package.json
+++ b/server/package.json
@@ -12,23 +12,23 @@
   "license": "MIT",
   "dependencies": {
     "@types/graphql": "^14.5.0",
-    "@types/node": "^14.0.25",
-    "apollo-server-fastify": "^2.15.1",
+    "@types/node": "^14.6.0",
+    "apollo-server-fastify": "3.0.0-alpha.3",
     "dotenv": "^8.2.0",
-    "fastify": "^2.15.1",
-    "fastify-cors": "^3.0.3",
-    "fastify-helmet": "^3.0.2",
+    "fastify": "^3.2.1",
+    "fastify-cors": "^4.1.0",
+    "fastify-helmet": "^5.0.1",
     "fastify-redis": "^4.0.1",
     "graphql": "^15.3.0",
     "log4js": "^6.3.0",
     "node-fetch": "^2.6.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.0.0-rc.3"
+    "type-graphql": "^1.0.0"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.7",
     "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   }
 }
