--- a/ui/package.json
+++ b/ui/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.0",
-    "@hot-loader/react-dom": "^16.13.0",
+    "@apollo/client": "^3.2.1",
+    "@hot-loader/react-dom": "^17.0.0-rc.2",
     "@testing-library/dom": "^7.24.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^12.1.5",
+    "@testing-library/user-event": "^12.1.6",
     "@types/jest": "^26.0.14",
-    "@types/node": "^14.10.3",
+    "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-window": "^1.8.2",
@@ -35,7 +35,7 @@
     "styled-components": "^5.2.0",
     "styled-icons": "^10.21.0",
     "throttle-debounce": "^2.3.0",
-    "typescript": "^4.0.2",
+    "typescript": "^4.0.3",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
