--- a/ui/package.json
+++ b/ui/package.json
@@ -3,41 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.1",
-    "@emotion/core": "^10.0.35",
+    "@apollo/client": "^3.2.5",
+    "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
-    "@hot-loader/react-dom": "^17.0.0-rc.2",
+    "@hot-loader/react-dom": "^17.0.0",
     "@testing-library/dom": "^7.24.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.7",
     "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.7",
-    "@types/react": "^16.9.51",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
     "date-fns": "^2.16.1",
     "dedupe": "^3.0.2",
     "dotenv": "^8.2.0",
     "emotion-icons": "^2.15.0",
-    "graphql": "^15.3.0",
+    "graphql": "^15.4.0",
     "iso-639-1": "^2.1.4",
     "memoize-one": "^5.1.1",
-    "nanoid": "^3.1.12",
-    "react": "^17.0.0-rc.3",
+    "nanoid": "^3.1.16",
+    "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^17.0.0-rc.3",
+    "react-dom": "^17.0.1",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
-    "react-window": "^1.8.5",
+    "react-window": "^1.8.6",
     "recoil": "^0.0.13",
     "smoothscroll-polyfill": "^0.4.4",
     "styled-icons": "^10.22.0",
     "throttle-debounce": "^2.3.0",
-    "typescript": "^4.0.3",
+    "typescript": "^4.0.5",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
