--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,6 @@
     "@apollo/client": "^3.2.5",
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
-    "@hot-loader/react-dom": "^17.0.0",
     "@testing-library/dom": "^7.24.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
@@ -30,18 +29,16 @@
     "react-dom": "^17.0.1",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.0",
     "react-spring": "^8.0.27",
     "react-window": "^1.8.6",
-    "recoil": "^0.0.13",
     "smoothscroll-polyfill": "^0.4.4",
-    "styled-icons": "^10.22.0",
-    "throttle-debounce": "^2.3.0",
+    "throttle-debounce": "^3.0.1",
     "typescript": "^4.0.5",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
-    "start": "set PORT=4000 && react-app-rewired start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -74,7 +71,6 @@
     "customize-cra": "^1.0.0",
     "customize-cra-react-refresh": "^1.1.0",
     "prettier": "2.1.2",
-    "react-app-rewired": "^2.1.6",
     "tslint-config-prettier": "^1.18.0"
   }
 }
