--- a/ui/package.json
+++ b/ui/package.json
@@ -3,38 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.5",
-    "@emotion/core": "^10.1.1",
-    "@emotion/styled": "^10.0.27",
-    "@testing-library/dom": "^7.24.5",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^12.1.7",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
+    "@apollo/client": "^3.3.6",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "@testing-library/dom": "^7.29.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-window": "^1.8.2",
     "@types/throttle-debounce": "^2.1.0",
     "date-fns": "^2.16.1",
     "dedupe": "^3.0.2",
     "dotenv": "^8.2.0",
-    "emotion-icons": "^2.15.0",
+    "emotion-icons": "^3.0.0",
     "graphql": "^15.4.0",
     "iso-639-1": "^2.1.4",
     "memoize-one": "^5.1.1",
-    "nanoid": "^3.1.16",
+    "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
-    "react-responsive": "^8.1.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "react-window": "^1.8.6",
     "smoothscroll-polyfill": "^0.4.4",
     "throttle-debounce": "^3.0.1",
-    "typescript": "^4.0.5",
+    "typescript": "^4.1.3",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
@@ -70,7 +71,7 @@
     "@types/webfontloader": "^1.6.32",
     "customize-cra": "^1.0.0",
     "customize-cra-react-refresh": "^1.1.0",
-    "prettier": "2.1.2",
+    "prettier": "2.2.1",
     "tslint-config-prettier": "^1.18.0"
   }
 }
